# secret-agents

./: .gitignore  agents-setup.py  neo_noir_dialog.py  prompts.py  pyproject.toml
discussions/: discussion_1.txt  discussion_1748286411.txt  discussion_1748286669.txt  discussion_1748287007.txt  discussion_1748287531.txt  discussion_1748287813.txt  discussion_1748287911.txt  discussion_1748290182.txt  discussion_1748290235.txt  discussion_1748290460.txt  discussion_1748290610.txt  discussion_1748291112.txt  discussion_1748291244.txt  discussion_interrupted.txt
